@@ -6,6 +6,7 @@ Date: 2025-09-12
 - Updated plugin header description to match the customer delivery specification.
 - Normalized text-domain loading path and ensured the default submenu label matches “Dashboard”.
 - Limited the Bonus Hunt edit tournament selector to active tournaments (while preserving already-linked selections).
+- Filtered the tournament edit “Connected Bonus Hunts” multiselect to current-year hunts while keeping already-linked entries visible.
 
 ## Stage-1 (Hotfix & Hardening)
 - Always run DB migrations on init via bhg_check_tables() → fixes missing tournament columns.
